cbm/internal/cbm/cbm.h


typedef enum {
    CBM_LANG_GO = 0,
    CBM_LANG_PYTHON,
    CBM_LANG_JAVASCRIPT,
    CBM_LANG_TYPESCRIPT,
    CBM_LANG_TSX,
    CBM_LANG_RUST,
    CBM_LANG_JAVA,
    CBM_LANG_CPP,
    CBM_LANG_CSHARP,
    CBM_LANG_PHP,
    CBM_LANG_LUA,
    CBM_LANG_SCALA,
    CBM_LANG_KOTLIN,
    CBM_LANG_RUBY,
    CBM_LANG_C,
    CBM_LANG_BASH,
    CBM_LANG_ZIG,
    CBM_LANG_ELIXIR,
    CBM_LANG_HASKELL,
    CBM_LANG_OCAML,
    CBM_LANG_OBJC,
    CBM_LANG_SWIFT,
    CBM_LANG_DART,
    CBM_LANG_PERL,
    CBM_LANG_GROOVY,
    CBM_LANG_ERLANG,
    CBM_LANG_R,
    CBM_LANG_HTML,
    CBM_LANG_CSS,
    CBM_LANG_SCSS,
    CBM_LANG_YAML,
    CBM_LANG_TOML,
    CBM_LANG_HCL,
    CBM_LANG_SQL,
    CBM_LANG_DOCKERFILE,
    CBM_LANG_CLOJURE,
    CBM_LANG_FSHARP,
    CBM_LANG_JULIA,
    CBM_LANG_VIMSCRIPT,
    CBM_LANG_NIX,
    CBM_LANG_COMMONLISP,
    CBM_LANG_ELM,
    CBM_LANG_FORTRAN,
    CBM_LANG_CUDA,
    CBM_LANG_COBOL,
    CBM_LANG_VERILOG,
    CBM_LANG_EMACSLISP,
    CBM_LANG_JSON,
    CBM_LANG_XML,
    CBM_LANG_MARKDOWN,
    CBM_LANG_MAKEFILE,
    CBM_LANG_CMAKE,
    CBM_LANG_PROTOBUF,
    CBM_LANG_GRAPHQL,
    CBM_LANG_VUE,
    CBM_LANG_SVELTE,
    CBM_LANG_MESON,
    CBM_LANG_GLSL,
    CBM_LANG_INI,
    CBM_LANG_MATLAB,
    CBM_LANG_LEAN,
    CBM_LANG_FORM,
    CBM_LANG_MAGMA,
    CBM_LANG_WOLFRAM,
    CBM_LANG_SOLIDITY,
    CBM_LANG_TYPST,
    CBM_LANG_GDSCRIPT,
    CBM_LANG_GLEAM,
    CBM_LANG_POWERSHELL,
    CBM_LANG_PASCAL,
    CBM_LANG_DLANG,
    CBM_LANG_NIM,
    CBM_LANG_SCHEME,
    CBM_LANG_FENNEL,
    CBM_LANG_FISH,
    CBM_LANG_AWK,
    CBM_LANG_ZSH,
    CBM_LANG_TCL,
    CBM_LANG_ADA,
    CBM_LANG_AGDA,
    CBM_LANG_RACKET,
    CBM_LANG_ODIN,
    CBM_LANG_RESCRIPT,
    CBM_LANG_PURESCRIPT,
    CBM_LANG_NICKEL,
    CBM_LANG_CRYSTAL,
    CBM_LANG_TEAL,
    CBM_LANG_HARE,
    CBM_LANG_PONY,
    CBM_LANG_LUAU,
    CBM_LANG_JANET,
    CBM_LANG_SWAY,
    CBM_LANG_NASM,
    CBM_LANG_ASSEMBLY,
    CBM_LANG_ASTRO,
    CBM_LANG_BLADE,
    CBM_LANG_JUST,
    CBM_LANG_GOTEMPLATE,
    CBM_LANG_TEMPL,
    CBM_LANG_LIQUID,
    CBM_LANG_JINJA2,
    CBM_LANG_PRISMA,
    CBM_LANG_HYPRLANG,
    CBM_LANG_DOTENV,
    CBM_LANG_DIFF,
    CBM_LANG_WGSL,
    CBM_LANG_KDL,
    CBM_LANG_JSON5,
    CBM_LANG_JSONNET,
    CBM_LANG_RON,
    CBM_LANG_THRIFT,
    CBM_LANG_CAPNP,
    CBM_LANG_PROPERTIES,
    CBM_LANG_SSHCONFIG,
    CBM_LANG_BIBTEX,
    CBM_LANG_STARLARK,
    CBM_LANG_BICEP,
    CBM_LANG_CSV,
    CBM_LANG_REQUIREMENTS,
    CBM_LANG_HLSL,
    CBM_LANG_VHDL,
    CBM_LANG_SYSTEMVERILOG,
    CBM_LANG_DEVICETREE,
    CBM_LANG_LINKERSCRIPT,
    CBM_LANG_GN,
    CBM_LANG_KCONFIG,
    CBM_LANG_BITBAKE,
    CBM_LANG_SMALI,
    CBM_LANG_TABLEGEN,
    CBM_LANG_ISPC,
    CBM_LANG_CAIRO,
    CBM_LANG_MOVE,
    CBM_LANG_SQUIRREL,
    CBM_LANG_FUNC,
    CBM_LANG_REGEX,
    CBM_LANG_JSDOC,
    CBM_LANG_RST,
    CBM_LANG_BEANCOUNT,
    CBM_LANG_MERMAID,
    CBM_LANG_PUPPET,
    CBM_LANG_PO,
    CBM_LANG_GITATTRIBUTES,
    CBM_LANG_GITIGNORE,
    CBM_LANG_SLANG,
    CBM_LANG_LLVM_IR,
    CBM_LANG_SMITHY,
    CBM_LANG_WIT,
    CBM_LANG_TLAPLUS,
    CBM_LANG_PKL,
    CBM_LANG_GOMOD,
    CBM_LANG_APEX,
    CBM_LANG_SOQL,
    CBM_LANG_SOSL,
    CBM_LANG_KUSTOMIZE, 
    CBM_LANG_K8S,       
    CBM_LANG_PINE,      
    CBM_LANG_QML,       
    CBM_LANG_CFSCRIPT,  
    CBM_LANG_CFML,      
    CBM_LANG_COUNT
} CBMLanguage;
typedef struct {
    const char *name;           
    const char *qualified_name; 
    const char *label;          
    const char *file_path;      
    uint32_t start_line;
    uint32_t end_line;
    const char *signature;     
    const char *return_type;   
    const char *receiver;      
    const char *docstring;     
    const char *parent_class;  
    const char **decorators;   
    const char **base_classes; 
    const char **param_names;  
    const char **param_types;  
    const char **return_types; 
    const char *route_path;    
    const char *route_method;  
    int complexity;            
    int cognitive;             
    int loop_count;            
    int loop_depth;            
    bool is_recursive;         
    int param_count;           
    int max_access_depth;      
    int linear_scan_in_loop;   
    int alloc_in_loop;         
    bool recursion_in_loop;    
    bool unguarded_recursion;  
    int lines;                 
    uint32_t *fingerprint;     
    int fingerprint_k;         
    bool is_exported;
    bool is_abstract;
    bool is_test;
    bool is_entry_point;
    const char *structural_profile; 
    const char *body_tokens;     
    const char *struct_trigrams; 
    uint32_t start_byte; 
    uint32_t end_byte;   
    const char *source;  
    uint32_t source_len; 
    const char *structured_path;
    uint64_t structured_occurrence_count;
    const char *structured_occurrence_sha256;
    uint32_t structured_first_start_byte;
    uint32_t structured_first_end_byte;
    uint32_t structured_last_start_byte;
    uint32_t structured_last_end_byte;
    const char *structured_classification;
    const char *structured_classification_provenance;
} CBMDefinition;
typedef struct {
    CBMReferenceEvidence evidence;
    uint32_t reference_start_byte;
    uint32_t reference_end_byte;
    uint32_t binding_start_byte;
    uint32_t binding_end_byte;
    uint32_t scope_start_byte;
    uint32_t scope_end_byte;
    const char *resolved_target_qn; 
} CBMReferenceIdentity;
typedef struct {
    const char *callee_name;            
    const char *enclosing_func_qn;      
    const char *first_string_arg;       
    const char *second_arg_name;        
    CBMCallArg args[CBM_MAX_CALL_ARGS]; 
    int arg_count;                      
    int loop_depth;                     
    int branch_depth;                   
    int start_line;                     
    bool is_method;                     
    const char *preprocess_context_id;  
    CBMReferenceIdentity reference;     
} CBMCall;
typedef enum {
    CBM_IMPORT_RESOLVE_SEMANTIC = 0,
    CBM_IMPORT_RESOLVE_EXACT_SOURCE = 1,
    CBM_IMPORT_RESOLVE_EXTERNAL_SOURCE = 2,
    CBM_IMPORT_RESOLVE_ES_SOURCE = 3,
    CBM_IMPORT_RESOLVE_BROWSER_URL = 4,
    CBM_IMPORT_RESOLVE_RUST_MODULE = 5,
} CBMImportResolution;
typedef enum {
    CBM_IMPORT_BINDING_LOCAL = 0,
    CBM_IMPORT_BINDING_RESOURCE = 1,
    CBM_IMPORT_BINDING_UNBOUND = 2,
} CBMImportBinding;
typedef struct {
    const char *local_name;      
    const char *module_path;     
    const char *resource_kind;   
    const char *dependency_kind; 
    CBMImportResolution resolution;
    CBMImportBinding binding;
} CBMImport;
typedef enum {
    CBM_REF_DOMAIN_SYMBOL = 0,   
    CBM_REF_DOMAIN_VALUE = 1,    
    CBM_REF_DOMAIN_CALLABLE = 2, 
    CBM_REF_DOMAIN_TYPE = 3,     
} CBMReferenceDomain;
typedef struct {
    const char *name;
    const char *enclosing_func_qn;
    uint32_t definition_start_byte;
    uint32_t definition_end_byte;
    uint32_t scope_start_byte;
    uint32_t scope_end_byte;
    CBMReferenceDomain target_domain;
} CBMLocalBinding;
typedef struct {
    const char *ref_name;             
    const char *enclosing_func_qn;    
    int start_line;                   
    CBMReferenceDomain target_domain; 
    CBMReferenceIdentity reference;   
} CBMUsage;
typedef struct {
    const char *exception_name;    
    const char *enclosing_func_qn; 
    int start_line;                
    CBMReferenceIdentity reference;
} CBMThrow;
typedef struct {
    const char *var_name;          
    const char *enclosing_func_qn; 
    int start_line;                
    bool is_write;                 
    CBMReferenceIdentity reference;
} CBMReadWrite;
typedef struct {
    const char *type_name;         
    const char *enclosing_func_qn; 
} CBMTypeRef;
typedef struct {
    const char *env_key;           
    const char *enclosing_func_qn; 
    int start_line;                
} CBMEnvAccess;
typedef struct {
    const char *var_name;          
    const char *type_name;         
    const char *enclosing_func_qn; 
} CBMTypeAssign;
typedef enum {
    CBM_STRREF_URL = 0,    
    CBM_STRREF_CONFIG = 1, 
} CBMStringRefKind;
typedef struct {
    const char *value;             
    const char *enclosing_func_qn; 
    const char *key_path;          
    CBMStringRefKind kind;         
} CBMStringRef;
typedef struct {
    const char *source_name; 
    const char *target_url;  
    const char *broker;      
} CBMInfraBinding;
typedef enum {
    CBM_CHANNEL_EMIT = 0,
    CBM_CHANNEL_LISTEN = 1,
} CBMChannelDirection;
typedef struct {
    const char *channel_name;      
    const char *transport;         
    const char *enclosing_func_qn; 
    int start_line;                
    CBMChannelDirection direction;
} CBMChannel;
typedef struct {
    const char *trait_name;  
    const char *struct_name; 
} CBMImplTrait;
typedef struct {
    const char *caller_qn; 
    const char *callee_qn; 
    const char *strategy;  
    float confidence;      
    const char *reason;    
    const char *preprocess_context_id; 
} CBMResolvedCall;
typedef struct {
    CBMResolvedCall *items;
    int count;
    int cap;
} CBMResolvedCallArray;
typedef struct {
    CBMDefinition *items;
    int count;
    int cap;
} CBMDefArray;
typedef struct {
    CBMCall *items;
    int count;
    int cap;
} CBMCallArray;
typedef struct {
    CBMImport *items;
    int count;
    int cap;
} CBMImportArray;
typedef struct {
    CBMUsage *items;
    int count;
    int cap;
} CBMUsageArray;
typedef struct {
    CBMLocalBinding *items;
    int count;
    int cap;
} CBMLocalBindingArray;
typedef struct {
    CBMThrow *items;
    int count;
    int cap;
} CBMThrowArray;
typedef struct {
    CBMReadWrite *items;
    int count;
    int cap;
} CBMRWArray;
typedef struct {
    CBMTypeRef *items;
    int count;
    int cap;
} CBMTypeRefArray;
typedef struct {
    CBMEnvAccess *items;
    int count;
    int cap;
} CBMEnvAccessArray;
typedef struct {
    CBMTypeAssign *items;
    int count;
    int cap;
} CBMTypeAssignArray;
typedef struct {
    CBMStringRef *items;
    int count;
    int cap;
} CBMStringRefArray;
typedef struct {
    CBMInfraBinding *items;
    int count;
    int cap;
} CBMInfraBindingArray;
typedef struct {
    CBMImplTrait *items;
    int count;
    int cap;
} CBMImplTraitArray;
typedef struct {
    CBMChannel *items;
    int count;
    int cap;
} CBMChannelArray;
typedef struct {
    const char *code;
    const char *operation;
    const char *message;
    const char *remediation;
    const char *node_type;
    uint32_t start_line;
    uint32_t end_line;
    uint32_t start_byte;
    uint32_t end_byte;
    const char *source;
    uint32_t source_len;
    bool is_missing;
} CBMParseDiagnostic;
typedef struct {
    CBMParseDiagnostic *items;
    int count;
    int cap;
} CBMParseDiagnosticArray;
typedef enum {
    CBM_EXTRACTION_OUTCOME_UNCLASSIFIED = 0,
    CBM_EXTRACTION_OUTCOME_INFRASTRUCTURE_FATAL = 1,
    CBM_EXTRACTION_OUTCOME_CONTENT_DEFECT = 2,
} CBMExtractionOutcomeClass;
typedef struct {
    const char *code;
    const char *operation;
    const char *phase;
    const char *message;
    const char *remediation;
    size_t requested;
    CBMExtractionOutcomeClass outcome_class;
    bool content_defect_recorded;
    uint64_t discarded_atom_facts;
    uint64_t discarded_relationship_facts;
} CBMExtractionError;
typedef struct {
    CBMArena arena; 
    CBMDefArray defs;
    CBMCallArray calls;
    CBMImportArray imports;
    CBMUsageArray usages;
    CBMLocalBindingArray local_bindings;
    CBMThrowArray throws;
    CBMRWArray rw;
    CBMTypeRefArray type_refs;
    CBMEnvAccessArray env_accesses;
    CBMTypeAssignArray type_assigns;
    CBMImplTraitArray impl_traits;       
    CBMResolvedCallArray resolved_calls; 
    CBMStringRefArray string_refs;       
    CBMInfraBindingArray infra_bindings; 
    CBMChannelArray channels;            
    CBMParseDiagnosticArray diagnostics; 
    const char *module_qn;      
    const char *namespace_name; 
    const char **exports;       
    const char **constants;     
    const char **global_vars;   
    const char **macros;        
    const char **exact_quoted_includes; 
    int exact_quoted_include_count;
    bool exact_quoted_includes_captured;
    const char *structured_classification;
    const char *structured_classification_provenance;
    uint64_t structured_schema_path_count;
    uint64_t structured_occurrence_count;
    bool has_error;
    const char *error_msg;
    CBMExtractionError error;
    bool is_test_file;
    int imports_count;
    TSTree *cached_tree;     
    CBMLanguage cached_lang; 
    const char *source;
    int source_len;
} CBMFileResult;
typedef struct {
    uint32_t start_byte;
    uint32_t end_byte;
    const char *qn;
} EFCEntry;
typedef struct {
    EFCEntry entries[EFC_SIZE];
    int count;
} EFCache;
typedef struct {
    const char *names[CBM_MAX_STRING_CONSTANTS];
    const char *values[CBM_MAX_STRING_CONSTANTS];
    int count;
} CBMStringConstantMap;
typedef struct {
    CBMArena *arena;
    CBMFileResult *result;
    const char *source;
    int source_len;
    CBMLanguage language;
    const char *project;
    const char *rel_path;
    const char *module_qn;
    TSNode root;
    const char *structured_classification_override;
    const char *structured_classification_override_provenance;
    CBMImportResolution es_import_resolution_override;
    bool es_import_resolution_override_enabled;
    bool rust_is_crate_root;               
    EFCache ef_cache;                      
    const char *enclosing_class_qn;        
    CBMStringConstantMap string_constants; 
    bool embedded;                         
} CBMExtractCtx;
int cbm_alloc_init(void);
int cbm_alloc_bindings_active(void);
int cbm_alloc_last_error(void);
int cbm_init(void);