crates/cbm-sys/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMImportArray {
    pub items: *mut CBMImport,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMImportArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMUsageArray {
    pub items: *mut CBMUsage,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMUsageArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMLocalBindingArray {
    pub items: *mut CBMLocalBinding,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMLocalBindingArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMThrowArray {
    pub items: *mut CBMThrow,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMThrowArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMRWArray {
    pub items: *mut CBMReadWrite,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMRWArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMTypeRefArray {
    pub items: *mut CBMTypeRef,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMTypeRefArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMEnvAccessArray {
    pub items: *mut CBMEnvAccess,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMEnvAccessArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMTypeAssignArray {
    pub items: *mut CBMTypeAssign,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMTypeAssignArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMStringRefArray {
    pub items: *mut CBMStringRef,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMStringRefArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMInfraBindingArray {
    pub items: *mut CBMInfraBinding,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMInfraBindingArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMImplTraitArray {
    pub items: *mut CBMImplTrait,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMImplTraitArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMChannelArray {
    pub items: *mut CBMChannel,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMChannelArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMParseDiagnostic {
    pub code: *const ::std::os::raw::c_char,
    pub operation: *const ::std::os::raw::c_char,
    pub message: *const ::std::os::raw::c_char,
    pub remediation: *const ::std::os::raw::c_char,
    pub node_type: *const ::std::os::raw::c_char,
    pub start_line: u32,
    pub end_line: u32,
    pub start_byte: u32,
    pub end_byte: u32,
    pub source: *const ::std::os::raw::c_char,
    pub source_len: u32,
    pub is_missing: bool,
}
impl Default for CBMParseDiagnostic {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMParseDiagnosticArray {
    pub items: *mut CBMParseDiagnostic,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMParseDiagnosticArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMExtractionError {
    pub code: *const ::std::os::raw::c_char,
    pub operation: *const ::std::os::raw::c_char,
    pub phase: *const ::std::os::raw::c_char,
    pub message: *const ::std::os::raw::c_char,
    pub remediation: *const ::std::os::raw::c_char,
    pub requested: usize,
}
impl Default for CBMExtractionError {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMFileResult {
    pub arena: CBMArena,
    pub defs: CBMDefArray,
    pub calls: CBMCallArray,
    pub imports: CBMImportArray,
    pub usages: CBMUsageArray,
    pub local_bindings: CBMLocalBindingArray,
    pub throws: CBMThrowArray,
    pub rw: CBMRWArray,
    pub type_refs: CBMTypeRefArray,
    pub env_accesses: CBMEnvAccessArray,
    pub type_assigns: CBMTypeAssignArray,
    pub impl_traits: CBMImplTraitArray,
    pub resolved_calls: CBMResolvedCallArray,
    pub string_refs: CBMStringRefArray,
    pub infra_bindings: CBMInfraBindingArray,
    pub channels: CBMChannelArray,
    pub diagnostics: CBMParseDiagnosticArray,
    pub module_qn: *const ::std::os::raw::c_char,
    pub namespace_name: *const ::std::os::raw::c_char,
    pub exports: *mut *const ::std::os::raw::c_char,
    pub constants: *mut *const ::std::os::raw::c_char,
    pub global_vars: *mut *const ::std::os::raw::c_char,
    pub macros: *mut *const ::std::os::raw::c_char,
    pub exact_quoted_includes: *mut *const ::std::os::raw::c_char,
    pub exact_quoted_include_count: ::std::os::raw::c_int,
    pub exact_quoted_includes_captured: bool,
    pub structured_classification: *const ::std::os::raw::c_char,
    pub structured_classification_provenance: *const ::std::os::raw::c_char,
    pub structured_schema_path_count: u64,
    pub structured_occurrence_count: u64,
    pub has_error: bool,
    pub error_msg: *const ::std::os::raw::c_char,
    pub error: CBMExtractionError,
    pub is_test_file: bool,
    pub imports_count: ::std::os::raw::c_int,
    pub cached_tree: *mut TSTree,
    pub cached_lang: CBMLanguage,
    pub source: *const ::std::os::raw::c_char,
    pub source_len: ::std::os::raw::c_int,
}
impl Default for CBMFileResult {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct EFCEntry {
    pub start_byte: u32,
    pub end_byte: u32,
    pub qn: *const ::std::os::raw::c_char,
}
impl Default for EFCEntry {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct EFCache {
    pub entries: [EFCEntry; 64usize],
    pub count: ::std::os::raw::c_int,
}
impl Default for EFCache {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMStringConstantMap {
    pub names: [*const ::std::os::raw::c_char; 256usize],
    pub values: [*const ::std::os::raw::c_char; 256usize],
    pub count: ::std::os::raw::c_int,
}
impl Default for CBMStringConstantMap {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMExtractCtx {
    pub arena: *mut CBMArena,
    pub result: *mut CBMFileResult,
    pub source: *const ::std::os::raw::c_char,
    pub source_len: ::std::os::raw::c_int,
    pub language: CBMLanguage,
    pub project: *const ::std::os::raw::c_char,
    pub rel_path: *const ::std::os::raw::c_char,
    pub module_qn: *const ::std::os::raw::c_char,
    pub root: TSNode,
    pub structured_classification_override: *const ::std::os::raw::c_char,
    pub structured_classification_override_provenance: *const ::std::os::raw::c_char,
    pub es_import_resolution_override: CBMImportResolution,
    pub es_import_resolution_override_enabled: bool,
    pub rust_is_crate_root: bool,
    pub ef_cache: EFCache,
    pub enclosing_class_qn: *const ::std::os::raw::c_char,
    pub string_constants: CBMStringConstantMap,
    pub embedded: bool,
}
impl Default for CBMExtractCtx {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn cbm_alloc_init() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_alloc_bindings_active() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_alloc_last_error() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_init() -> ::std::os::raw::c_int;
}
